# serializer version: 1
# name: test_config_flow[create]
  FlowResultSnapshot({
    'result': ConfigEntrySnapshot({
      'title': 'My dehumidifier',
    }),
    'title': 'My dehumidifier',
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
  })
# ---
# name: test_config_flow[init]
  FlowResultSnapshot({
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
# name: test_options[create_entry]
  FlowResultSnapshot({
    'result': True,
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
  })
# ---
# name: test_options[init]
  FlowResultSnapshot({
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
# name: test_options[with_away]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'action': <HumidifierAction.IDLE: 'idle'>,
      'available_modes': list([
        'normal',
        'away',
      ]),
      'current_humidity': 10.0,
      'device_class': 'dehumidifier',
      'friendly_name': 'My dehumidifier',
      'humidity': 100,
      'max_humidity': 100,
      'min_humidity': 0,
      'mode': 'normal',
      'saved_humidity': 35.0,
      'supported_features': <HumidifierEntityFeature: 1>,
    }),
    'context': <ANY>,
    'entity_id': 'humidifier.my_dehumidifier',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_options[without_away]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'action': <HumidifierAction.IDLE: 'idle'>,
      'current_humidity': 10.0,
      'device_class': 'dehumidifier',
      'friendly_name': 'My dehumidifier',
      'humidity': 100,
      'max_humidity': 100,
      'min_humidity': 0,
      'saved_humidity': 35,
      'supported_features': <HumidifierEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'humidifier.my_dehumidifier',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
